<resources>
    <string name="app_name">GCFunde</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_header_main_text1">Welcome to SEUL</string>
    <string name="nav_header_main_text3">Online contents currently not accessible</string>
    <string name="nav_header_main_picContent">nav_header_main_mainpic</string>
    <string name="activity_main_drawer_headline2">@string/action_settings</string>
    <string name="activity_main_drawer_search">Search/filter</string>
    <string name="activity_main_drawer_create">Create</string>
    <string name="content_main_search">Name or GC-Number</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="title_activity_geocache_details">Geocache Details</string>
    <string name="title_activity_create_geocache_entry">Erstelle Cache in Datenbank</string>
    <string name="content_create_geocache_entry_GCName">Cachename</string>
    <string name="content_create_geocache_entry_GCSize">Size</string>
    <string name="content_create_geocache_entry_GCT">Terrain</string>
    <string name="content_create_geocache_entry_">Difficulty</string>
    <string name="content_create_geocache_entry_GCType">Cachetype</string>
    <string name="content_create_geocache_entry_createshow">Create and display</string>
    <string name="content_create_geocache_entry_create">Create</string>
    <string-array name="terrainDiffuculty">
        <item>1</item>
        <item>1,5</item>
        <item>2</item>
        <item>2,5</item>
        <item>3</item>
        <item>3,5</item>
        <item>4</item>
        <item>4,5</item>
        <item>5</item>
    </string-array>

    <string-array name="content_main_noMatch">Keine Ergebnisse</string-array>

    <string name="fragment_geocache_details_pic_edit">edit</string>
    <string name="fragment_geocache_details_log_ourLog">Our Log:</string>
    <string name="fragment_geocache_details_log_date">Date</string>

    <string name="GCTitle">Geocache title</string>
    <string name="GCNumber">GC-Number</string>
    <string name="TerrainDifficulty">D:1,0 - T:1,0</string>
    <string name="DistanceToCache">~ 999,99 km</string>
    <string name="FavoritePoints">9999</string>

    <string name="fragment_geocache_details_details">Details</string>
    <string name="fragment_geocache_details_log">Logs</string>
    <string name="fragment_geocache_details_waypoints">Waypoints</string>
    <string name="content_create_geocache_entry_GCNumber">@string/GCNumber</string>
    <string name="nav_header_main_text2">Online content currently accessible</string>
</resources>