<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_search" android:icon="@drawable/ic_action_search"
            android:title="@string/activity_main_drawer_search"/>
        <item android:id="@+id/nav_create" android:icon="@drawable/ic_action_add"
            android:title="@string/activity_main_drawer_create"/>
        <item android:id="@+id/nav_deatails" android:icon="@drawable/ic_action_add"
            android:title="Geocache Details"/>
    </group>

    <item android:title="@string/activity_main_drawer_headline2">
        <menu>
            <item android:id="@+id/nav_settings" android:icon="@drawable/ic_action_settings"
                android:title="@string/action_settings"/>
        </menu>
    </item>

</menu>