<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgVType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="GCSymbol"
        android:minHeight="75dp"
        android:minWidth="75dp"
        android:src="@drawable/ic_action_camera" />

    <TextView
        android:id="@+id/txtFGCTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imgVType"
        android:lines="1"
        android:maxLines="1"
        android:maxWidth="150dp"
        android:text="@string/GCTitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/primary_text_default_material_light" />

    <TextView
        android:id="@+id/txtFGCNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFGCTitle"
        android:layout_toEndOf="@+id/imgVType"
        android:text="@string/GCNumber"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/primary_text_default_material_light" />

    <ImageView
        android:id="@+id/imgVDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:minHeight="75dp"
        android:minWidth="50dp"
        android:src="@drawable/ic_action_add" />

    <TextView
        android:id="@+id/txtFDifficultyTerrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFGCNumber"
        android:layout_toEndOf="@+id/imgVType"
        android:text="@string/TerrainDifficulty"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/primary_text_default_material_light" />

    <ImageView
        android:id="@+id/imgVFavSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFGCTitle"
        android:layout_toStartOf="@+id/imgVDirection"
        android:minHeight="25dp"
        android:minWidth="25dp"
        android:src="@drawable/ic_action_add" />

    <TextView
        android:id="@+id/txtFDistanceToCache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgVDirection"
        android:layout_toStartOf="@+id/imgVDirection"
        android:text="@string/DistanceToCache"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/primary_text_default_material_light" />

    <TextView
        android:id="@+id/txtFFavoritePoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFGCTitle"
        android:layout_toStartOf="@+id/imgVFavSymbol"
        android:gravity="center_vertical"
        android:minHeight="25dp"
        android:text="@string/FavoritePoints"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/primary_text_default_material_light" />
</RelativeLayout>